# agro-greenhouse-designer

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  SECURITY.md  packages.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  security.yml
.streamlit/: config.toml
chroma_db/: chroma.sqlite3
data/: rules.yaml
demo_cache/: default_run.en.json  default_run.json  default_run.pkl  default_run.ru.json  failed_run.en.json  failed_run.json  failed_run.pkl  failed_run.ru.json
docs/: architecture.md  example_report.en.md  example_report.md  example_report.ru.md  failed_example.en.md  failed_example.md  failed_example.ru.md
scripts/: build_demo_cache.py  build_failed_case.py  build_rag.py  install_hooks.sh
src/: __init__.py  graph.py  i18n.py  llm.py
src/agents/: __init__.py  analyst.py  designer.py  engineer.py  reporter.py  validator.py
src/calc/: __init__.py  geotechnical.py  heat.py  lighting.py  structural.py  ventilation.py  water.py
src/rag/: __init__.py  climate_lookup.py  rules_engine.py  sp_index.py
src/render/: __init__.py  pdf.py
src/schemas/: __init__.py  calc_results.py  design.py  project.py  state.py  validation.py
src/templates/: report.en.md.j2  report.md.j2  report.ru.md.j2
src/viz/: __init__.py  charts.py
tests/: test_calc_heat.py  test_rules_engine.py
ui/: app.py  i18n.py
