[project]
name = "agro-greenhouse-designer"
version = "0.1.0"
description = "Multi-agent system for greenhouse complex pre-design based on Russian SP 107.13330"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Dmitriy Pisanko" }]

dependencies = [
    "langgraph>=0.2.50",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "anthropic>=0.40.0",
    "pydantic>=2.9.0",
    "chromadb>=0.5.0",
    "pypdf>=5.0.0",
    "pyyaml>=6.0",
    "matplotlib>=3.9.0",
    "jinja2>=3.1.0",
    "markdown>=3.7",
    "weasyprint>=63.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["UP042"]  # str+Enum still preferred; StrEnum changes equality semantics for Pydantic

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
